--- a/ann/Regularization.ipynb
+++ b/ann/Regularization.ipynb
@@ -54,6 +54,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "(100, 2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
